--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Please enable JavaScript to continue.</noscript>
   </body>
 </html>
